<resources>
    <string name="app_name">GloFarm</string>
    <string name="farmer_name">Farm Name</string>
    <string name="stock_icon">stockicon</string>
    <string name="available_stock">Available Stock</string>
    <string name="total_stock">Total Stock</string>
    <string name="sales">Sales</string>
    <string name="stock_amount">Please enter amount of opening stock</string>
    <string name="hello_blank_fragment">Stories Fragment</string>
    <string name="sign_in"> Create Account</string>
    <string name="please_enter_your_farm_name">Enter your farm name</string>
    <string name="select_product_category">Select Product category</string>
    <string name="please_enter_your_password">Set a new PIN</string>
    <string name="crop_husbandry">Crop Husbandry</string>
    <string name="dairy_farming">Dairy Farming</string>
    <string name="mixed_farming">Mixed Farming</string>
    <string name="login">LogIn</string>
    <string name="please_enter_your_expense_name">Please Enter your expense name</string>
    <string name="please_enter_the_expense_amount">Please enter the expense amount</string>
    <string name="cart">shoppingcart</string>
    <string name="order_details">Order Details</string>
    <string name="order_name">Order name</string>
    <string name="client_name">Client Name:</string>
    <string name="client_contact">Client Contact</string>
    <string name="phone">phone</string>
    <string name="please_enter_your_name">Please enter your first name</string>
    <string name="enter_your_national_id_number">Enter your National ID Number</string>
    <string name="confirm_password">Confirm PIN</string>
    <string name="enter_your_phone_number">Enter your Phone number</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="click_to_add_a_product_image">Click to add a product Image</string>
    <string name="productdesc">Enter Available Product Amount</string>
    <string name="customer_helpline">Customer Helpline</string>
    <string name="my_products">Sort </string>
    <string name="my_profile">My Profile</string>
    <string name="settings">settings</string>
    <string name="appsettings">Settings</string>
    <string name="clear_expenses">Clear Expense list</string>
    <string name="remaining_stock">Remaining Stock</string>
    <string name="please_enter_sale_amount">Please enter sale amount</string>
    <string name="tempicon">icon</string>
    <string name="agromarket">Agro-Market</string>
    <string name="farmfinancials">Farm Financials</string>
    <string name="supporttools">Support Tools</string>
    <string name="inputtracking">Input Tracking</string>
    <string name="made_with_love_by_global_auto_systems">Made with Love By Global Auto Systems</string>
    <string name="products">Products</string>
    <string name="farm_tools">Farm Tools</string>
    <string name="supplies">Supplies</string>
    <string name="manuals">FAQs</string>
    <string name="notices">Notices</string>
    <string name="stories">Stories</string>
    <string name="todo">TODO</string>
    <string name="sendbutton">sendbutton</string>
    <string name="please_enter_the_input_name">Please enter the input Name</string>
    <string name="please_enter_the_input_amount">Please Enter the Input amount</string>
    <string name="sort_by">Sort By</string>
    <string name="date"> Sort By Date</string>
    <string name="alphabetical_order"> Sort By Alphabetical Order</string>
    <string name="readmore_link"> Read More<a href="globalautosystems.co.ug" /></string>
    <string name="description">The Government of Uganda would like to inform the general public that there has been an outbreak of corona in
        the country. 3 cases have been reported in Mbale, 5 cases in Kabale and 20 cases in Isingiro. In this regard, every one is advised to keep minimum
        contact with all collegeaus or any suspected corona Virus victims Read More....</string>
    <string name="corona_virus_outbreak">CORONA VIRUS OUTBREAK</string>
    <string name="successstory">In 2016,My cattle got infected with Foot and mouth disease. I lost 20 of the to this terrible disease and thats when i swore
    never to give up on my fight against it.
    In 2016,My cattle got infected with Foot and mouth disease. I lost 20 of the to this terrible disease and thats when i swore
    never to give up on my fight against it.
    In 2016,My cattle got infected with Foot and mouth disease. I lost 20 of the to this terrible disease and thats when i swore
    never to give up on my fight against it.
    In 2016,My cattle got infected with Foot and mouth disease. I lost 20 of the to this terrible disease and thats when i swore
    never to give up on my fight against it.
    In 2016,My cattle got infected with Foot and mouth disease. I lost 20 of the to this terrible disease and thats when i swore
    never to give up on my fight against it.</string>
    <string name="_20th_jan_2020">20th jan 2020</string>
    <string name="read_more">Read More</string>
    <string name="nahabwe_edwin">NAHABWE EDWIN</string>
    <string name="mr_nahabwe_defeats_foot_and_mouth_disease">MR NAHABWE DEFEATS FOOT AND MOUTH DISEASE</string>
    <string name="upload">Upload</string>
    <string name="farmer_image">Farmer image</string>
    <string name="nahabwes_farm">Nahabwes Farm</string>
    <string name="ntungamo_plot23">Ntungamo, Plot23</string>
    <string name="next_icon">next icon</string>
    <string name="other_farmers">Other Farmers</string>
    <string name="enter_your_farm_location">Enter your farm location</string>
    <string name="financial_report">Financial Report</string>
    <string name="enter_product_amount">Enter Product amount</string>
    <string name="please_enter_your_phone_number">Please enter Your Phone number</string>
    <string name="please_enter_your_pin_to_login">Please enter your pin to login</string>
    <string name="please_type_your_pin">Please type your pin</string>
    <string name="have_no_account_create_now">Have no account? Create now</string>
    <string name="login_image">Login image</string>
    <string name="enter_product_unit_price">Enter Product Unit Price</string>
    <string name="icon">icon</string>
    <string name="confirmedstatus">confirmed</string>
    <string name="_12_02_2019">12/02/2019</string>
    <string name="total_sales">Total Sales</string>
    <string name="_2000000_ugx">0 UGX</string>
    <string name="investment_input">Investment/Input</string>
    <string name="expenditure">Expenditure</string>
    <string name="profits_made">Profits Made</string>
    <string name="losses_made">Losses made</string>
    <string name="select_date_to_view_report">Tap Calendar to View Report</string>
    <string name="no_orders_have_been_placed_today_you_will_be_notified_incase_new_orders_arrive">No Orders Have been placed Today,You will be notified incase new orders Arrive</string>
    <string name="no_sales_have_been_made_today">No sales Have been made Today</string>
    <string name="enter_product_units_i_e_mls_kgs_litres_e_t_c">Enter product Units i.e mls/kgs/litres e.t.c</string>
    <string name="you_haven_t_added_any_expenses_today">You haven\'t added any Expenses Today</string>
    <string name="you_haven_t_added_any_inputs_today">You haven\'t added any Inputs Today</string>
    <string name="tap_to_view_notice">Tap to view Notice</string>
    <string name="new_orders">New Orders</string>
    <string name="productsTAB">MY PRODUCTS</string>
    <string name="zerougx">0 UGX</string>
    <string name="ask_a_question">Ask A question</string>
    <string name="enter_question">Enter Question</string>
    <string name="view_full_business_report">View Full Business Report</string>
    <string name="please_enter_your_lastname">Please enter your lastname</string>
    <string name="chats">Chat</string>
    <string-array name="dairy_units">
        <item>litres</item>
        <item>packets</item>
        <item>Tins</item>
        <item>Kgs</item>
    </string-array>
    <string-array name="crop_units">
        <item>Kgs</item>
        <item>Bunches</item>
    </string-array>
    <string-array name="mixed_units">
        <item>Kgs</item>
        <item>Bunches</item>
        <item>litres</item>
        <item>packets</item>
        <item>Tins</item>
    </string-array>
    <string name="title_activity_chat_detail">ScrollingActivity</string>
</resources>