<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:id="@+id/profile"
        android:layout_height="80dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="10">

            <ImageView
                android:contentDescription="@string/farmer_image"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:src="@mipmap/flower" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:orientation="vertical"
                android:weightSum="12">

                <TextView
                    android:id="@+id/clientname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/nahabwes_farm"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/clientcontact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/ntungamo_plot23"
                    android:textSize="18sp" />


            </LinearLayout>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/next_icon"
                app:srcCompat="@drawable/ic_mode_edit_black_24dp" />


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/others"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/profile"
        android:background="@color/lightgray"
        android:text="@string/other_farmers"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/marketrecyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/others"
        android:layout_marginTop="10dp" />
</RelativeLayout>