<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/productlayout"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:hint="@string/enter_product_name"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/desclayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/productlayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:hint="@string/productdesc"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/desclayout"
        android:layout_marginStart="90dp"
        android:text="@string/click_to_add_a_product_image"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/addpicture"
        android:layout_width="200dp"
        android:contentDescription="@string/click_to_add_a_product_image"
        android:layout_height="200dp"
        android:layout_below="@+id/add"
        android:layout_marginStart="90dp"
        app:srcCompat="@drawable/ic_add_gray" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addpicture"
        android:layout_margin="10dp"
        android:text="@string/upload"
        android:textColor="@color/white" />
</RelativeLayout>